<resources>
    <string name="app_name">Bathing Sites</string>

    <!-- Bathing sites main page -->
    <string name="bathing_sites">bathing sites</string>
    <string name="bath_img_description">bathing sign</string>
    <string name="title_activity_new_bathing_site">New Bathing Site</string>
    <!-- Show random bathing site dialog -->
    <string name="title_show_bathing_site">Bathing site</string>
    <string name="error_no_bathing_sites">No bathing sites saved!</string>
    <!-- Location permission request strings -->
    <string name="title_permission_required">Permission required</string>
    <string name="message_location_required">Location permission needed to show bathing sites on the map</string>

    <!-- Dialog button texts -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <!-- Universal menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_download">Download</string>
    <string name="menu_map">Map</string>

    <!-- Downloading new bathing sites dialog -->
    <string name="downloading_bathing_site_message">Downloading and saving new sites…</string>

    <!-- New bathing site form field strings -->
    <string name="form_name">Name</string>
    <string name="form_description">Description</string>
    <string name="form_address">Address</string>
    <string name="form_latitude">Latitude</string>
    <string name="form_longitude">Longitude</string>
    <string name="form_grade">Grade</string>
    <string name="form_water_temp">Water temp</string>
    <string name="form_date_for_temp">Date for temp</string>
    <!-- Form error messages -->
    <string name="error_no_name">Name is required!</string>
    <string name="error_no_position">Address OR latitude/longitude are required!</string>
    <string name="error_invalid_lat">Range -90 to 90!</string>
    <string name="error_invalid_long">Range -180 to 180!</string>
    <string name="error_invalid_position">Can\'t find position</string>

    <!-- Toast messages when saving bath site to database -->
    <string name="database_save_success">Bath site saved!</string>
    <string name="database_save_failed">Error: Location already saved!</string>

    <!-- New bathing site menu strings -->
    <string name="menu_clear">Clear</string>
    <string name="menu_save">Save</string>
    <string name="menu_weather">Weather</string>
    <string name="title_activity_settings">Settings</string>

    <!-- New bathing site dialog strings -->
    <string name="title_current_weather">Current weather</string>
    <string name="downloading_weather_message">Fetching current weather…</string>
    <string name="description_weather_image">Current weather</string>

    <!-- Map strings -->
    <string name="location_permission_not_granted">No permission to use device location!</string>

    <!-- Settings strings -->
    <!-- Preference Titles -->
    <string name="weather_header">Weather</string>
    <string name="download_header">Download</string>
    <string name="map_header">Map</string>
    <!-- Weather Preferences -->
    <string name="weather_title">Weather data URL</string>
    <string name="default_weather_url">https://dt031g.programvaruteknik.nu/bathingsites/weather.php</string>
    <string name="default_weather_icon_url">https://openweathermap.org/img/w/</string>
    <!-- Download Preferences-->
    <string name="download_title">Download bathing sites URL</string>
    <string name="default_download_url">https://dt031g.programvaruteknik.nu/bathingsites/download/</string>
    <!-- Map Preferences -->
    <string name="map_title">Max distance to show bathing sites</string>

    <!-- Unicode strings -->
    <string name="degree_sign">\u00B0</string>
    <string name="title_activity_maps">Map</string>


</resources>