<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/weather_header">

        <EditTextPreference
            app:key="weather_url"
            app:title="@string/weather_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/default_weather_url"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/download_header">

        <EditTextPreference
            app:key="download_bathing_sites_url"
            app:title="@string/download_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/default_download_url"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/map_header">

        <SeekBarPreference
            app:key="map_distance_to_show_sites"
            app:title="@string/map_title"
            app:useSimpleSummaryProvider="true"
            app:showSeekBarValue="true"
            android:defaultValue="@integer/default_map_distance"
            android:max="@integer/max_map_distance" />

    </PreferenceCategory>

</PreferenceScreen>
